<resources>
    <string name="app_name">GeoQuizApp</string>
    <string name="question_text">تهران پایتخت ایران است</string>
    <string name="button_false">نادرست</string>
    <string name="button_true">درست</string>

    <string name="toast_correct">جواب شما صحیح می باشد</string>
    <string name="toast_incorrect">جواب شما غلط می باشد</string>
    <string name="toast_score">امتیاز شما: </string>

    <string name="question_australia">استرالیا بزرگ ترین قاره جهان است.</string>
    <string name="question_oceans">اقیانوس آرام بزرگ ترین اقیانوس جهان است.</string>
    <string name="question_mideast">همه کشورهای خاورمیانه عرب زبان هستند.</string>
    <string name="question_africa">مصر در قاره آفریقا قرار دارد.</string>
    <string name="question_americas">کشور آمریکا پرجمعیت ترین کشور دنیا است.</string>
    <string name="question_asia">قاره آسیا در نیم کره جنوبی جهان واقع شده است.</string>

    <string name="button_first">اولین</string>
    <string name="button_last">آخرین</string>
    <string name="button_next">بعدی</string>
    <string name="button_previous">قبلی</string>
    <string name="button_refresh">شروع دوباره</string>

    <string name="warning_text">آیا برای تقلب اطمینان دارید؟</string>
    <string name="show_answer_button">نمایش تقلب</string>
    <string name="cheat_button">تقلب</string>
    <string name="judgment_toast">تقلب کار بدیه!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>