<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        tools:context=".controller.QuizActivity">
        <TextView
            android:id="@+id/txtview_question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_false"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="left"
                    android:adjustViewBounds="true"
                    android:scaleType="center"
                    android:text="@string/button_previous"
                    android:tint="#000000" />

                <TextView
                    android:id="@+id/txt_false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="-70dp"
                    android:clickable="false"
                    android:text="@string/button_false"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_true"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="left"
                    android:adjustViewBounds="true"
                    android:paddingLeft="0dp"
                    android:scaleType="center"
                    android:text="@string/button_true"
                    android:tint="#000000" />

                <TextView
                    android:id="@+id/txt_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="-65dp"
                    android:clickable="false"
                    android:text="@string/button_true"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_first"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="left"
                    android:adjustViewBounds="true"
                    android:paddingLeft="0dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_arrow_right"
                    android:text="@string/button_next"
                    android:tint="#000000" />


                <ImageButton
                    android:id="@+id/btn_prev"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="left"
                    android:adjustViewBounds="true"
                    android:paddingLeft="0dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_arrow_left"
                    android:text="@string/button_previous"
                    android:tint="#000000" />


                <ImageButton
                    android:id="@+id/btn_next"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="left"
                    android:adjustViewBounds="true"
                    android:paddingLeft="0dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_arrow_right"
                    android:text="@string/button_next"
                    android:tint="#000000" />


                <ImageButton
                    android:id="@+id/btn_last"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="left"
                    android:adjustViewBounds="true"
                    android:paddingLeft="0dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_arrow_right"
                    android:text="@string/button_next"
                    android:tint="#000000" />


        </LinearLayout>

        <Button
            android:id="@+id/cheat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/cheat_button"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:context=".controller.QuizActivity">

        <TextView
            android:id="@+id/textScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/toast_score"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textDigit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_refresh"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:text="@string/button_refresh" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="-120dp"
                android:text="@string/button_refresh"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>